; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_atiixp_modem.c_snd_atiixp_check_bus_busy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_atiixp_modem.c_snd_atiixp_check_bus_busy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atiixp_modem = type { i32 }

@CMD = common dso_local global i32 0, align 4
@ATI_REG_CMD_MODEM_SEND1_EN = common dso_local global i32 0, align 4
@ATI_REG_CMD_MODEM_RECEIVE_EN = common dso_local global i32 0, align 4
@ATI_REG_IER_MODEM_SET_BUS_BUSY = common dso_local global i32 0, align 4
@IER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atiixp_modem*)* @snd_atiixp_check_bus_busy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_atiixp_check_bus_busy(%struct.atiixp_modem* %0) #0 {
  %2 = alloca %struct.atiixp_modem*, align 8
  %3 = alloca i32, align 4
  store %struct.atiixp_modem* %0, %struct.atiixp_modem** %2, align 8
  %4 = load %struct.atiixp_modem*, %struct.atiixp_modem** %2, align 8
  %5 = load i32, i32* @CMD, align 4
  %6 = call i32 @atiixp_read(%struct.atiixp_modem* %4, i32 %5)
  %7 = load i32, i32* @ATI_REG_CMD_MODEM_SEND1_EN, align 4
  %8 = load i32, i32* @ATI_REG_CMD_MODEM_RECEIVE_EN, align 4
  %9 = or i32 %7, %8
  %10 = and i32 %6, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @ATI_REG_IER_MODEM_SET_BUS_BUSY, align 4
  store i32 %13, i32* %3, align 4
  br label %15

14:                                               ; preds = %1
  store i32 0, i32* %3, align 4
  br label %15

15:                                               ; preds = %14, %12
  %16 = load %struct.atiixp_modem*, %struct.atiixp_modem** %2, align 8
  %17 = load i32, i32* @IER, align 4
  %18 = load i32, i32* @ATI_REG_IER_MODEM_SET_BUS_BUSY, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @atiixp_update(%struct.atiixp_modem* %16, i32 %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @atiixp_read(%struct.atiixp_modem*, i32) #1

declare dso_local i32 @atiixp_update(%struct.atiixp_modem*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
